--- a/Planet_stuff_2.ipynb
+++ b/Planet_stuff_2.ipynb
@@ -26,7 +26,7 @@
     "    print(json.dumps(data, indent=2))\n",
     "\n",
     "# Planet API key:\n",
-    "os.environ['PL_API_KEY']='342b6ccb68fb4d42b65488c4b1bdb189'\n",
+    "os.environ['PL_API_KEY']=\n",
     "PLANET_API_KEY = os.getenv('PL_API_KEY')\n",
     "\n",
     "# Setup Planet Data API base URL\n",
@@ -635,10 +635,10 @@
    "outputs": [],
    "source": [
     "# Send a GET request to the assets url for the item (Get the list of available assets for the item)\n",
-    "res = session.get(assets_url)\n",
+    "#res = session.get(assets_url)\n",
     "\n",
     "# Assign a variable to the response\n",
-    "assets = res.json()"
+    "#assets = res.json()"
    ]
   },
   {
@@ -656,7 +656,7 @@
    ],
    "source": [
     "# Print the asset types that are available\n",
-    "print(assets.keys())"
+    "#print(assets.keys())"
    ]
   },
   {
@@ -686,10 +686,10 @@
    ],
    "source": [
     "# Assign a variable to the visual asset from the item's assets\n",
-    "visual = assets[\"visual\"]\n",
+    "#visual = assets[\"visual\"]\n",
     "\n",
     "# Print the visual asset data\n",
-    "p(visual)"
+    "#p(visual)"
    ]
   },
   {
@@ -707,13 +707,13 @@
    ],
    "source": [
     "# Setup the activation url for a particular asset (in this case the visual asset)\n",
-    "activation_url = visual[\"_links\"][\"activate\"]\n",
+    "#activation_url = visual[\"_links\"][\"activate\"]\n",
     "\n",
     "# Send a request to the activation url to activate the item\n",
-    "res = session.get(activation_url)\n",
+    "#res = session.get(activation_url)\n",
     "\n",
     "# Print the response from the activation request\n",
-    "p(res.status_code)"
+    "#p(res.status_code)"
    ]
   },
   {
@@ -745,29 +745,29 @@
     }
    ],
    "source": [
-    "import time\n",
+    "#import time\n",
     "\n",
-    "asset_activated = False\n",
+    "#asset_activated = False\n",
     "\n",
-    "while asset_activated == False:\n",
+    "#while asset_activated == False:\n",
     "    # Send a request to the item's assets url\n",
-    "    res = session.get(assets_url)\n",
+    "#    res = session.get(assets_url)\n",
     "\n",
     "    # Assign a variable to the item's assets url response\n",
-    "    assets = res.json()\n",
+    "#    assets = res.json()\n",
     "\n",
     "    # Assign a variable to the visual asset from the response\n",
-    "    visual = assets[\"visual\"]\n",
+    "#    visual = assets[\"visual\"]\n",
     "\n",
-    "    asset_status = visual[\"status\"]\n",
+    "#    asset_status = visual[\"status\"]\n",
     "    \n",
     "    # If asset is already active, we are done\n",
-    "    if asset_status == 'active':\n",
-    "        asset_activated = True\n",
-    "        print(\"Asset is active and ready to download\")\n",
+    "#    if asset_status == 'active':\n",
+    "#        asset_activated = True\n",
+    "#        print(\"Asset is active and ready to download\")\n",
     "\n",
     "# Print the visual asset data    \n",
-    "p(visual)"
+    "#p(visual)"
    ]
   },
   {
@@ -785,10 +785,10 @@
    ],
    "source": [
     "# Assign a variable to the visual asset's location endpoint\n",
-    "location_url = visual[\"location\"]\n",
+    "#location_url = visual[\"location\"]\n",
     "\n",
     "# Print the location endpoint\n",
-    "print(location_url)"
+    "#print(location_url)"
    ]
   },
   {
@@ -842,7 +842,7 @@
    ],
    "source": [
     "# Download the file from an activated asset's location url\n",
-    "pl_download(location_url)"
+    "#pl_download(location_url)"
    ]
   },
   {
