--- a/Planet_stuff_2.ipynb
+++ b/Planet_stuff_2.ipynb
@@ -26,7 +26,7 @@
     "    print(json.dumps(data, indent=2))\n",
     "\n",
     "# Planet API key:\n",
-    "os.environ['PL_API_KEY']='342b6ccb68fb4d42b65488c4b1bdb189'\n",
+    "os.environ['PL_API_KEY']=\n",
     "PLANET_API_KEY = os.getenv('PL_API_KEY')\n",
     "\n",
     "# Setup Planet Data API base URL\n",
