Downloaded clip rather than entire scene

--- a/Planet_Imagery_Download_POLA.ipynb
+++ b/Planet_Imagery_Download_POLA.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        " 'Dec': 11}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        " 'Aug': 1}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -831,115 +831,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"__daily_email_enabled\": false,\n",
-      "  \"_links\": {\n",
-      "    \"_self\": \"https://api.planet.com/data/v1/searches/5f367b272b3f4364a78fc0e81738e5b9\",\n",
-      "    \"results\": \"https://api.planet.com/data/v1/searches/5f367b272b3f4364a78fc0e81738e5b9/results\"\n",
-      "  },\n",
-      "  \"created\": \"2019-01-22T00:22:54.097433Z\",\n",
-      "  \"filter\": {\n",
-      "    \"config\": [\n",
-      "      {\n",
-      "        \"config\": {\n",
-      "          \"gte\": 0.5\n",
-      "        },\n",
-      "        \"field_name\": \"usable_data\",\n",
-      "        \"type\": \"RangeFilter\"\n",
-      "      },\n",
-      "      {\n",
-      "        \"config\": {\n",
-      "          \"lte\": 0.1\n",
-      "        },\n",
-      "        \"field_name\": \"cloud_cover\",\n",
-      "        \"type\": \"RangeFilter\"\n",
-      "      },\n",
-      "      {\n",
-      "        \"config\": {\n",
-      "          \"gte\": \"2018-01-01T00:00:00Z\",\n",
-      "          \"lte\": \"2019-01-01T00:00:00Z\"\n",
-      "        },\n",
-      "        \"field_name\": \"acquired\",\n",
-      "        \"type\": \"DateRangeFilter\"\n",
-      "      },\n",
-      "      {\n",
-      "        \"config\": {\n",
-      "          \"coordinates\": [\n",
-      "            [\n",
-      "              [\n",
-      "                -118.28601837158202,\n",
-      "                33.706062655101206\n",
-      "              ],\n",
-      "              [\n",
-      "                -118.1722068786621,\n",
-      "                33.706062655101206\n",
-      "              ],\n",
-      "              [\n",
-      "                -118.1722068786621,\n",
-      "                33.776150942519855\n",
-      "              ],\n",
-      "              [\n",
-      "                -118.28601837158202,\n",
-      "                33.776150942519855\n",
-      "              ],\n",
-      "              [\n",
-      "                -118.28601837158202,\n",
-      "                33.706062655101206\n",
-      "              ]\n",
-      "            ]\n",
-      "          ],\n",
-      "          \"type\": \"Polygon\"\n",
-      "        },\n",
-      "        \"field_name\": \"geometry\",\n",
-      "        \"type\": \"GeometryFilter\"\n",
-      "      }\n",
-      "    ],\n",
-      "    \"type\": \"AndFilter\"\n",
-      "  },\n",
-      "  \"id\": \"5f367b272b3f4364a78fc0e81738e5b9\",\n",
-      "  \"item_types\": [\n",
-      "    \"PSOrthoTile\"\n",
-      "  ],\n",
-      "  \"last_executed\": null,\n",
-      "  \"name\": \"POLA\",\n",
-      "  \"search_type\": \"saved\",\n",
-      "  \"updated\": \"2019-01-22T00:22:54.097460Z\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This time we will setup a saved search endpoint url\n",
     "save_url = \"{}/searches\".format(URL)\n",
     "\n",
-    "save_request = {\n",
-    "    \"name\" : \"POLA\",\n",
-    "    \"item_types\" : [\"PSOrthoTile\"],\n",
-    "    \"filter\" : and_POLA_filter\n",
-    "}\n",
+    "#save_request = {\n",
+    "#    \"name\" : \"POLA\",\n",
+    "#    \"item_types\" : [\"PSOrthoTile\"],\n",
+    "#    \"filter\" : and_POLA_filter\n",
+    "#}\n",
     "\n",
     "# Send a POST request to the endpoint URL for saved searches and save the result in variable save_res\n",
-    "save_res = session.post(save_url,json=save_request)\n",
+    "#save_res = session.post(save_url,json=save_request)\n",
     "\n",
     "# See what the resonse is:\n",
-    "p(save_res.json())"
+    "#p(save_res.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We can see what saved results there are for the account by sending a GET request:\n",
-    "get_save_res = session.get(save_url, params={\"search_type\" : \"saved\"})"
+    "#get_save_res = session.get(save_url, params={\"search_type\" : \"saved\"})"
    ]
   },
   {
@@ -957,18 +876,18 @@
     }
    ],
    "source": [
-    "searches =  get_save_res.json()[\"searches\"]\n",
-    "print(len(searches))\n",
+    "#searches =  get_save_res.json()[\"searches\"]\n",
+    "#print(len(searches))\n",
     "\n",
     "# Loop through the searches\n",
-    "for search in searches:\n",
+    "#for search in searches:\n",
     "    # Print the ID, Created Time, and Name for each saved search\n",
-    "    print(\"id: {} created: {} name: {}\".format(search[\"id\"], search[\"created\"], search['name']))"
+    "#    print(\"id: {} created: {} name: {}\".format(search[\"id\"], search[\"created\"], search['name']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +900,9 @@
    ],
    "source": [
     "# Get the url for the POLA search (by getting the ID of it)\n",
-    "POLA_save_url = \"{}/{}\".format(save_url, searches[0][\"id\"])\n",
+    "#POLA_save_url = \"{}/{}\".format(save_url, searches[0][\"id\"])\n",
+    "\n",
+    "POLA_save_url = \"{}/{}\".format(save_url, '5f367b272b3f4364a78fc0e81738e5b9')\n",
     "\n",
     "# Print it\n",
     "p(POLA_save_url)"
@@ -1005,7 +926,7 @@
    ],
    "source": [
     "# Now lets go back and see the links in the saved search results:\n",
-    "p(save_res.json()[\"_links\"])"
+    "#p(save_res.json()[\"_links\"])"
    ]
   },
   {
@@ -1052,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1147,36 +1068,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "POLA_features = results[\"features\"][1:]"
+    "POLA_features = results[\"features\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1976601_1154610_2018-12-29_1049'"
+       "'1978998_1154610_2018-12-30_1015_RGB_Visual.tif'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "POLA_features[0]['id']"
+    "POLA_features[0]['id'] + '_RGB_Visual.tif'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,16 +1106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://api.planet.com/data/v1/item-types/PSOrthoTile/items/1935018_1154610_2018-12-15_103b/assets/'"
+       "'https://api.planet.com/data/v1/item-types/PSOrthoTile/items/1938040_1154610_2018-12-16_1052/assets/'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,6 +1169,24 @@
     "            time.sleep(0.22)\n",
     "    return response_codes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1978998_1154610_2018-12-30_1015_RGB_visual.tif'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1522,6 +1461,229 @@
     "    file_name = pl_download(location)\n",
     "    time.sleep(0.08)\n",
     "    print(file_name + ' Complete - Size: '+str(round(os.path.getsize('images/'+file_name)/1000000))+' MB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying to do a clip request rather than downloading the entire ortho scene as has been done up to this point. Too much data was used up in the previous process, so hopefully this is easier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up a Clip request\n",
+    "\n",
+    "# Set Item Type\n",
+    "item_type = \"PSOrthoTile\"\n",
+    "\n",
+    "# Set Asset Type\n",
+    "asset_type = 'visual'\n",
+    "\n",
+    "#AOI\n",
+    "POLA_aoi = '''{\n",
+    "    \"type\": \"Polygon\",\n",
+    "    \"coordinates\": [\n",
+    "      [\n",
+    "        [\n",
+    "          -118.28601837158202,\n",
+    "          33.70406337147754\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.07830810546875,\n",
+    "          33.70406337147754\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.07830810546875,\n",
+    "          33.7760082547261\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.28601837158202,\n",
+    "          33.7760082547261\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.28601837158202,\n",
+    "          33.70406337147754\n",
+    "        ]\n",
+    "      ]\n",
+    "    ]   \n",
+    "  }'''\n",
+    "\n",
+    "# Construct clip API payload\n",
+    "clip_payload = {\n",
+    "    'aoi': json.loads(POLA_aoi),\n",
+    "    'targets': [\n",
+    "      {\n",
+    "        'item_id': POLA_features[0]['id'],\n",
+    "        'item_type': item_type,\n",
+    "        'asset_type': asset_type\n",
+    "      }\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Request clip of scene (This will take some time to complete)\n",
+    "req = requests.post('https://api.planet.com/compute/ops/clips/v1', auth=(PLANET_API_KEY, \"\"), json=clip_payload)\n",
+    "clip_url = req.json()['_links']['_self']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "...Still waiting for clipping to complete...\n",
+      "Clip of scene succeeded and is ready to download\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Poll API to monitor clip status. Once finished, download and upzip the scene\n",
+    "clip_succeeded = False\n",
+    "while not clip_succeeded:\n",
+    "\n",
+    "    # Poll API\n",
+    "    check_state_request = requests.get(clip_url, auth=(PLANET_API_KEY, \"\"))\n",
+    "    \n",
+    "    # If clipping process succeeded , we are done\n",
+    "    if check_state_request.json()['state'] == 'succeeded':\n",
+    "        clip_download_url = check_state_request.json()['_links']['results'][0]\n",
+    "        clip_succeeded = True\n",
+    "        print(\"Clip of scene succeeded and is ready to download\") \n",
+    "    \n",
+    "    # Still activating. Wait 1 second and check again.\n",
+    "    else:\n",
+    "        print(\"...Still waiting for clipping to complete...\")\n",
+    "        time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1978998_1154610_2018-12-30_1015_clip.zip'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl_download(clip_download_url, filename = (POLA_features[0]['id'] + '_clip.zip'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Item Type\n",
+    "item_type = \"PSOrthoTile\"\n",
+    "\n",
+    "# Set Asset Type\n",
+    "asset_type = 'visual'\n",
+    "\n",
+    "#AOI\n",
+    "POLA_aoi = '''{\n",
+    "    \"type\": \"Polygon\",\n",
+    "    \"coordinates\": [\n",
+    "      [\n",
+    "        [\n",
+    "          -118.28601837158202,\n",
+    "          33.70406337147754\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.07830810546875,\n",
+    "          33.70406337147754\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.07830810546875,\n",
+    "          33.7760082547261\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.28601837158202,\n",
+    "          33.7760082547261\n",
+    "        ],\n",
+    "        [\n",
+    "          -118.28601837158202,\n",
+    "          33.70406337147754\n",
+    "        ]\n",
+    "      ]\n",
+    "    ]   \n",
+    "  }'''\n",
+    "\n",
+    "for feature in POLA_features:\n",
+    "    scene_id = feature['id']\n",
+    "    # Construct clip API payload\n",
+    "    clip_payload = {\n",
+    "        'aoi': json.loads(POLA_aoi),\n",
+    "        'targets': [\n",
+    "          {\n",
+    "            'item_id': scene_id,\n",
+    "            'item_type': item_type,\n",
+    "            'asset_type': asset_type\n",
+    "          }\n",
+    "        ]\n",
+    "    }\n",
+    "    req = requests.post('https://api.planet.com/compute/ops/clips/v1', auth=(PLANET_API_KEY, \"\"), json=clip_payload)\n",
+    "    clip_url = req.json()['_links']['_self']\n",
+    "    clip_succeeded = False\n",
+    "    while not clip_succeeded:\n",
+    "\n",
+    "        # Poll API\n",
+    "        check_state_request = requests.get(clip_url, auth=(PLANET_API_KEY, \"\"))\n",
+    "\n",
+    "        # If clipping process succeeded , we are done\n",
+    "        if check_state_request.json()['state'] == 'succeeded':\n",
+    "            clip_download_url = check_state_request.json()['_links']['results'][0]\n",
+    "            clip_succeeded = True\n",
+    "            print(\"Clip of scene succeeded and is ready to download\") \n",
+    "\n",
+    "        # Still activating. Wait 1 second and check again.\n",
+    "        else:\n",
+    "            print(\"...Still waiting for clipping to complete...\")\n",
+    "            time.sleep(5)\n",
+    "    time.sleep(5)\n",
+    "    FN = pl_download(clip_download_url, filename = (scene_id + '_POLA_clip.zip'))\n",
+    "    print(FN + ' Complete')"
    ]
   },
   {
